--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,18 +1,7 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "server/index.js",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "client/package.json",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "client/build" }
-    }
-  ],
-  "routes": [
-    { "src": "/api/(.*)", "dest": "server/index.js" },
-    { "src": "/(.*)", "dest": "client/build/$1" }
-  ]
+  "builds": [{ 
+    "src": "./index.js", "use": "@vercel/node"
+  }],
+  "routes":[{"src": "/(.*)", "dest": "/"}]
 }
