--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,25 +1,10 @@
 {
   "version": 2,
-<<<<<<< HEAD
   "builds": [
     {
-      "src": "server/index.js",
+      "src": "./index.js",
       "use": "@vercel/node"
-    },
-    {
-      "src": "client/package.json",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "client/build" }
     }
   ],
-  "routes": [
-    { "src": "/api/(.*)", "dest": "server/index.js" },
-    { "src": "/(.*)", "dest": "client/build/$1" }
-  ]
-=======
-  "builds": [{ 
-    "src": "./index.js", "use": "@vercel/node"
-  }],
-  "routes":[{"src": "/(.*)", "dest": "/"}]
->>>>>>> e111a6a257b0583f5b1e8e3b3a08b882f36543af
+  "routes": [{ "src": "/(.*)", "dest": "/" }]
 }
